--- a/ubuntu-14.04/gpu/prerequisites/Dockerfile
+++ b/ubuntu-14.04/gpu/prerequisites/Dockerfile
@@ -1,12 +1,16 @@
 FROM nvidia/cuda:7.5-cudnn4-devel-ubuntu14.04
 MAINTAINER Siew Kar Fai <karfai0317@gmail.com>
 
+# Reference: Ubuntu Installation - http://caffe.berkeleyvision.org/install_apt.html
+
 RUN apt-get update && apt-get install -y \
+# Essential command-line interface
     bc \
     git \
     wget \
     unzip \
     \
+# General dependencies
     libprotobuf-dev \
     libleveldb-dev \
     libsnappy-dev \
@@ -14,16 +18,19 @@ RUN apt-get update && apt-get install -y \
     libhdf5-serial-dev \
     protobuf-compiler \
     \
-    libatlas-base-dev && \
+# BLAS: ATLAS
+    libatlas-base-dev \
     \
-    apt-get install -y --no-install-recommends \
-    libboost-all-dev && \
-    \
-    apt-get install -y \
+# Remaining dependencies
     libgflags-dev \
     libgoogle-glog-dev \
     liblmdb-dev && \
     \
+# Boost C++ libraries
+    apt-get install -y --no-install-recommends \
+    libboost-all-dev && \
+    \
+# Clean up
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /tmp/*
